# BotFactory

./: .env.prod.example  .gitignore  AGENT_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT.md  PROJECT.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  start_all.sh  stop_all.sh
backend/: .cursorrules  .env.example  .gitignore  Dockerfile  Makefile  README.md  WEBHOOK_SETUP.md  manage.py  pyproject.toml  reset_admin_password.py  run.sh  runserver.sh  test_analytics.py
backend/apps/accounts/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_add_user_api_keys.py  0003_add_notification_preferences.py  0004_add_tenant_model.py  0005_migrate_users_to_tenants.py
backend/apps/accounts/tests/: test_user_api_keys.py
backend/apps/ai_settings/: __init__.py  admin.py  apps.py  models.py  services.py  urls.py  views.py
backend/apps/ai_settings/fixtures/: initial_data.json
backend/apps/ai_settings/migrations/: 0001_initial.py
backend/apps/analytics/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
backend/apps/analytics/migrations/: 0001_add_analytics_models.py  0002_add_webhook_monitoring.py
backend/apps/analytics/tests/: __init__.py  test_models.py  test_views.py
backend/apps/bots/: admin.py  ai_views.py  apps.py  models.py  public_views.py  serializers.py  services.py  urls.py  views.py
backend/apps/bots/migrations/: 0001_initial.py  0002_add_ui_config.py  0003_encrypt_telegram_tokens.py  0004_botapikey.py  0005_bot_webhook_secret.py  0007_add_delivery_mode.py  0008_add_webhook_monitoring.py
backend/apps/bots/tests/: __init__.py  (+5 more)
backend/apps/chat/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/commands/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: health_views.py
backend/apps/knowledge/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/telegram/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  webhook_urls.py  webhook_views.py
backend/bot_factory/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/bot_factory/settings/: __init__.py  base.py  development.py  logging_config.py  production.py
backend/core/: authentication.py  exceptions.py  middleware.py  mixins.py  pagination.py  permissions.py  utils.py
backend/docs/: IMPLEMENTATION_SUMMARY.md  PUBLIC_API.md  QUICK_START.md  README.md  TESTING.md
backend/requirements/: base.txt  development.txt  production.txt
backend/scripts/: init-db.sql  setup_postgres.sh
backend/services/: __init__.py  ai_base.py  ai_factory.py  anthropic.py  bot_engine.py  file_processing.py  gemini.py  openai.py  transcription.py  webhook_helper.py
bot/: .cursorrules  .env  README.md  __init__.py  check_and_install.sh  config.py  dispatcher.py  main.py  pyproject.toml  requirements.txt  run_bot.sh  run_uv.sh  setup.sh  setup_uv.sh
bot/handlers/: __init__.py  callbacks.py  chat.py  commands.py  forms.py  start.py
bot/integrations/: __init__.py  django_orm.py  django_setup.py
bot/keyboards/: __init__.py  dynamic.py
bot/services/: __init__.py  analytics_tracker.py  bot_manager.py  bot_monitor.py  command_registry.py  gemini_client.py  message_processor.py  ui_config_service.py
bot/states/: __init__.py  dynamic_forms.py
bot/utils/: __init__.py  form_builder.py  keyboard_builder.py
(+77 files in other folders)
